...
    <string name="app_name" translatable="false">Wholphin</string>
    <string name="app_name_long" translatable="false">Wholphin</string>

    <string name="about">About</string>
    <string name="active_recordings">Active Recordings</string>
    <string name="add_favorite">Favorite</string>
    <string name="add_server">Add Server</string>
    <string name="add_user">Add User</string>
    <string name="audio">Audio</string>
    <string name="birthplace">Birthplace</string>
    <string name="bitrate">Bitrate</string>
    <string name="born">Born</string>
    <string name="cancel_recording">Cancel Recording</string>
...
    <string name="default_track">Default</string>
    <string name="delete">Delete</string>
    <string name="died">Died</string>
    <string name="directed_by">Directed by %1$s</string>
    <string name="director">Director</string>
    <string name="disabled">Disabled</string>
    <string name="discovered_servers">Discovered Servers</string>
    <string name="download_and_update"><![CDATA[Download & Update]]></string>
    <string name="downloading">Downloading…</string>
    <string name="enabled">Enabled</string>
    <string name="ends_at">Ends at %1$s</string>
    <string name="enter_server_url">Enter Server IP or URL</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="episodes">Episodes</string>
    <string name="error_loading_collection">Error loading collection %1$s</string>
    <string name="external_track">External</string>
    <string name="favorites">Favorites</string>
    <string name="file_size">Size</string>
    <string name="forced_track">Forced</string>
...
    <string name="sort_by_date_episode_added">Date Episode Added</string>
    <string name="sort_by_date_played">Date Played</string>
    <string name="sort_by_date_released">Date Released</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_random">Random</string>
    <string name="studios">Studios</string>
    <string name="submit">Submit</string>
    <string name="subtitle_download_too_long">Download is taking a long time, you may need to restart playback</string>
    <string name="subtitle">Subtitle</string>
    <string name="subtitles">Subtitles</string>
    <string name="suggestions">Suggestions</string>
    <string name="switch_servers">Switch servers</string>
    <string name="switch_user">Switch</string>
...
